--- a/scoots/scoots-l.css
+++ b/scoots/scoots-l.css
@@ -7,24 +7,6 @@
         --accent1-color: #967920;
       }    
 
-    header {
-        justify-content:flex-start;
-        
-    }
-    #header-img{
-        display: block;
-        float:right;
-        margin:0;
-        width: 100%;
-        height: 100%;
-    }
-
-
-    /* HEADER */
-    #logo{
-        border-bottom: 4px solid var(--background-color);
-        border-left: 9px solid var(--background-color);
-    }
 
     /* HOME RENTALS */
 
@@ -134,7 +116,25 @@
 }
 
 #tours div:hover {
-        box-shadow: 0 0 11px 
+    box-shadow: 0 0 11px;
+}
+
+#beachdiv{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin: 2rem;
+}
+
+.responsive{
+    width: 100%;
+}
+
+#beach1{
+    grid-column: 1/2;
+}
+
+#beachmap{
+    display: block;
 }
 
 }
