resources pages finished

--- a/scoots/scoots-s.css
+++ b/scoots/scoots-s.css
@@ -340,7 +340,12 @@ transition: filter 0.5s;
     display: none;
 }
 
-
+/* RESOURCES */
+#resourcesdiv{
+    text-align: left;
+    padding: 2rem;
+    
+}
 
 
 
